# rustodo

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: .gitignore  Cargo.toml
server/src/: conf.rs  db.rs  main.rs
