[package]
name = "frontend-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = { version = "0.6.0", features = ["json"] }
leptos = { version = "0.6.15", features = ["csr"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
wasm-bindgen = "0.2.95"
