[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4"
cookie = "0.18.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
sqlite = "0.36.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
